--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/devops_lab
+    url: jdbc:mysql://db-server:3306/devops_lab
     username: devops_user
     password: securepassword
   jpa:
@@ -17,8 +17,6 @@ server:
 logging:
   level:
     com.devops.devopsjavaapp: DEBUG
-  file:
-    name: /var/log/devops-app/app.log
 
 app:
   name: "DevOps Java Application"
